add description and survey form style

--- a/style.css
+++ b/style.css
@@ -15,11 +15,28 @@ body {
     display: block;
 }
 
-#description {}
+#description {
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    text-shadow: 1px 1px 1px grey;
+}
 
-#survey-form {}
+#survey-form {
+    background: var(--color-darkgrey-alpha);
+    border-radius: 0.25rem;
+    box-sizing: border-box;
+    box-shadow: 1px 1px grey;
+    display: block;
+    align-items: center;
+    font-size: 1.125rem;
+    margin-bottom: 0.5rem;
+}
 
-#name {}
+#name {
+}
 
 #email {}
 
